--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "一个基于Node的Telegram BOT",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "clean": "rm -rf node_modules"
+    "start": "node code/app.js",
+    "dev": "nodemon code/app.js",
+    "clean": "rm -rf node_modules",
+    "deploy": "s deploy"
   },
   "repository": {
     "type": "git",
