--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node code/app.js",
     "dev": "nodemon code/app.js",
     "clean": "rm -rf node_modules",
-    "deploy": "s deploy"
+    "deploy": "s deploy",
+    "logs": "heroku logs --tail -a lyz05tgbot"
   },
   "repository": {
     "type": "git",
